--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
   <title>Nhập Mật Khẩu</title>
   <link rel="stylesheet" href="style.css" />
 </head>
+   <script async src="https://www.googletagmanager.com/gtag/js?id=G-04K4GRMQYB"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-04K4GRMQYB');
+  </script>
 <body>
   <div class="container">
     <div class="content">
