--- a/index.html
+++ b/index.html
@@ -6,14 +6,15 @@
   <title>Nhập Mật Khẩu</title>
   <link rel="stylesheet" href="style.css" />
 </head>
-   <script async src="https://www.googletagmanager.com/gtag/js?id=G-04K4GRMQYB"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-Z1486JNJKT"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-    gtag('config', 'G-04K4GRMQYB');
-  </script>
+  gtag('config', 'G-Z1486JNJKT');
+</script>
 <body>
   <div class="container">
     <div class="content">
